--- a/WS_EF_DBFirst/MainWindow.xaml
+++ b/WS_EF_DBFirst/MainWindow.xaml
@@ -10,8 +10,10 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <ComboBox Name="cboSuppliers" Grid.Row="0" Margin="5" SelectionChanged="cboSuppliers_SelectionChanged"></ComboBox>
-        <ListBox Grid.Row="1" Margin="5" Name="lboProducts"></ListBox>
+        <ListBox Grid.Row="1" Margin="5" Name="lboProducts" SelectionChanged="lboProducts_SelectionChanged"></ListBox>
+        <ListBox Name="lboCustomer" Grid.Row="2" Margin="5"></ListBox>
     </Grid>
 </Window>
